FreeST/test/Programs/InvalidTests/Linearity/EndTwice/EndTwice.fst
main : ()
main = 
    let (x, y) = new @Close () in
    close x;
    close x;
    wait y
